[Qt][ARM] Implementing missing macro assembler instructions after r121925 https://bugs.webkit.org/show_bug.cgi?id=90657

Reviewed by Csaba Osztrogonác.

Implementing convertibleLoadPtr, replaceWithLoad and
replaceWithAddressComputation.

* assembler/ARMAssembler.h:
(JSC::ARMAssembler::replaceWithLoad):
(ARMAssembler):
(JSC::ARMAssembler::replaceWithAddressComputation):
* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::convertibleLoadPtr):
(MacroAssemblerARM):


Canonical link: https://commits.webkit.org/108572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122060 268f45cc-cd09-0410-ab3c-d52691b4dbfc